--- a/samples/default.conf
+++ b/samples/default.conf
@@ -80,7 +80,7 @@ server {
   # for example rewrite ^/~(.*)/(.*)/? /users/$1/$2 last;
   # http://nginx.org/en/docs/http/ngx_http_rewrite_module.html
   location @rewrites {
-    rewrite ^ /index.cfm$request_uri last;
+    rewrite ^/(.*)? /index.cfm/$1 last;
   }
 
 }
