--- a/samples/lucee-nginx/5.1/Dockerfile
+++ b/samples/lucee-nginx/5.1/Dockerfile
@@ -1,4 +1,4 @@
-FROM joeltobey/lucee:nginx
+FROM joeltobey/lucee:5.1-nginx
 
 # Create Lucee configs
 COPY lucee-server.xml /opt/lucee/server/lucee-server/context/lucee-server.xml
@@ -6,5 +6,3 @@ COPY lucee-web.xml.cfm /opt/lucee/web/lucee-web.xml.cfm
 
 # Copy default nginx config files
 COPY default.conf /etc/nginx/conf.d/
-
-COPY index.cfm /var/www/
