--- a/samples/5.1/Dockerfile
+++ b/samples/5.1/Dockerfile
@@ -3,3 +3,4 @@ FROM joeltobey/lucee:5.1
 # Create Lucee configs
 COPY lucee-server.xml /opt/lucee/server/lucee-server/context/lucee-server.xml
 COPY lucee-web.xml.cfm /opt/lucee/web/lucee-web.xml.cfm
+COPY log4j.properties /opt/lucee/web/log4j.properties
