--- a/cb/5.2/Dockerfile
+++ b/cb/5.2/Dockerfile
@@ -2,10 +2,11 @@ FROM joeltobey/lucee:5.2
 
 MAINTAINER Daemonites <hello@daemon.com.au>
 
-ENV COMMANDBOX_DEBIAN_URL https://www.ortussolutions.com/parent/download/commandbox/type/deb
+ENV COMMANDBOX_BIN_URL https://www.ortussolutions.com/parent/download/commandbox/type/bin
+ENV BIN_DIR /usr/bin
 
 # Install CommandBox
-RUN wget -nv $COMMANDBOX_DEBIAN_URL -O /root/commandbox-debian.deb && \
-	dpkg -i /root/commandbox-debian.deb && \
-	rm -rf /root/commandbox-debian.deb && \
-	box
+RUN wget -nv $COMMANDBOX_BIN_URL -O /root/box.zip && \
+	unzip /root/box.zip -d ${BIN_DIR} && chmod +x ${BIN_DIR}/box && \
+	rm -rf /root/box.zip && \
+	echo "$(box version) successfully installed"
