separate regular from alpine

--- a/cb/5.2/Dockerfile
+++ b/cb/5.2/Dockerfile
@@ -2,11 +2,10 @@ FROM joeltobey/lucee:5.2
 
 MAINTAINER Daemonites <hello@daemon.com.au>
 
-ENV COMMANDBOX_BIN_URL https://www.ortussolutions.com/parent/download/commandbox/type/bin
-ENV BIN_DIR /usr/bin
+ENV COMMANDBOX_DEBIAN_URL https://www.ortussolutions.com/parent/download/commandbox/type/deb
 
 # Install CommandBox
-RUN wget -nv $COMMANDBOX_BIN_URL -O /root/box.zip && \
-	unzip /root/box.zip -d ${BIN_DIR} && chmod +x ${BIN_DIR}/box && \
-	rm -rf /root/box.zip && \
+RUN wget -nv $COMMANDBOX_DEBIAN_URL -O /root/commandbox-debian.deb && \
+	dpkg -i /root/commandbox-debian.deb && \
+	rm -rf /root/commandbox-debian.deb && \
 	echo "$(box version) successfully installed"
