--- a/5.3/Dockerfile
+++ b/5.3/Dockerfile
@@ -1,11 +1,12 @@
-FROM tomcat:9-jre8
+FROM tomcat:9.0.33-jdk11-adoptopenjdk-openj9
 
 MAINTAINER Joel Tobey <joeltobey@gmail.com>
 
-ARG LUCEE_VERSION=5.3.3.62
-ARG COMMANDBOX_VERSION=4.7.0
+ARG LUCEE_VERSION=5.3.5.92
+ARG COMMANDBOX_VERSION=5.0.1
 
 ENV HOME /root
+WORKDIR $HOME
 
 ### Directory Mappings ###
 # BIN_DIR = Where the box binary goes
@@ -20,57 +21,63 @@ WORKDIR $BUILD_DIR
 ENV APP_DIR /var/www
 WORKDIR $APP_DIR
 
-ENV CATALINA_HOME /usr/local/tomcat
+# Replace the Trusted SSL Certificates packaged with Lucee with those from
+# Java. Different OpenJDK versions have different paths for cacerts
+RUN mkdir -p /opt/lucee/server/lucee-server/context/security && \
+	if   [ -e "$JAVA_HOME/jre/lib/security/cacerts" ]; then ln -s "$JAVA_HOME/jre/lib/security/cacerts" -t /opt/lucee/server/lucee-server/context/security/; \
+	elif [ -e "$JAVA_HOME/lib/security/cacerts" ]; then ln -s "$JAVA_HOME/lib/security/cacerts" -t /opt/lucee/server/lucee-server/context/security/; \
+	else echo "Unable to find/symlink cacerts."; exit 1; fi
 
-ENV LUCEE_JARS_URL http://release.lucee.org/rest/update/provider/loader/$LUCEE_VERSION
-ENV LUCEE_JAVA_OPTS "-Djava.awt.headless=true -server -Xms256m -Xmx512m"
+# Custom setenv.sh to load Lucee
+# Tomcat memory settings
+# -Xms<size> set initial Java heap size
+# -Xmx<size> set maximum Java heap size
+ENV LUCEE_JAVA_OPTS "-Djava.awt.headless=true -server -Xms64m -Xmx512m"
 
-# Download core JAR, and delete it in one step to avoid committing the installer in a FS layer
-RUN wget -nv $LUCEE_JARS_URL -O $HOME/lucee.jar && \
-	mkdir -p $CATALINA_HOME/lucee && \
-	cp $HOME/lucee.jar $CATALINA_HOME/lucee/lucee.jar && \
-	rm -rf $HOME/lucee.jar
-
-# Delete the default Tomcat webapps so they aren't deployed at startup
-RUN rm -rf $CATALINA_HOME/webapps/*
+# Download Lucee JAR
+ENV LUCEE_JAR_URL http://release.lucee.org/rest/update/provider/loader/$LUCEE_VERSION
+RUN mkdir -p $CATALINA_HOME/lucee
+ADD $LUCEE_JAR_URL $CATALINA_HOME/lucee/lucee.jar
 
 # Set Tomcat config to load Lucee
-COPY tomcat/catalina.properties tomcat/server.xml tomcat/web.xml $CATALINA_HOME/conf/
+COPY tomcat/catalina.properties \
+	tomcat/server.xml \
+	tomcat/web.xml \
+	$CATALINA_HOME/conf/
 COPY tomcat/rewrite.config $CATALINA_HOME/conf/Catalina/localhost/
 
 # Custom setenv.sh to load Lucee
-COPY tomcat/setenv.sh $CATALINA_HOME/bin/
-RUN chmod a+x $CATALINA_HOME/bin/setenv.sh
+COPY supporting/setenv.sh /usr/local/tomcat/bin/
+RUN chmod a+x /usr/local/tomcat/bin/setenv.sh
 
 # Create Lucee configs
 COPY lucee/lucee-server.xml /opt/lucee/server/lucee-server/context/lucee-server.xml
-COPY lucee/lucee-web.xml.cfm /opt/lucee/web/lucee-web.xml.cfm
-COPY lucee/log4j.properties /opt/lucee/web/log4j.properties
+COPY lucee/lucee-web.xml.cfm \
+     lucee/log4j.properties \
+     /opt/lucee/web/
 
-# Copy file system
-COPY test/ $APP_DIR/
+# Provide test page
+COPY www/ $APP_DIR/
 COPY build/ $BUILD_DIR/
 RUN ls -la $BUILD_DIR
 RUN chmod +x $BUILD_DIR/*.sh
 ONBUILD RUN rm -rf $APP_DIR/*
 
 # Commandbox Installation
+RUN apt-get update -y; \
+    apt-get install -y unzip
+#ENV COMMANDBOX_URL https://downloads.ortussolutions.com/ortussolutions/commandbox/${COMMANDBOX_VERSION}/commandbox-bin-${COMMANDBOX_VERSION}.zip
+#ADD $COMMANDBOX_URL $BIN_DIR
+#RUN chmod +x $BIN_DIR/box
 RUN $BUILD_DIR/install-commandbox.sh
 
 # CFConfig Installation
 RUN $BUILD_DIR/install-cfconfig.sh
 
 # lucee first time startup; explodes lucee and installs bundles/extensions (prewarms twice due to additional bundle downloads)
-COPY tomcat/prewarm.sh $CATALINA_HOME/bin/
+COPY supporting/prewarm.sh $CATALINA_HOME/bin/
 RUN chmod +x $CATALINA_HOME/bin/prewarm.sh
 RUN $CATALINA_HOME/bin/prewarm.sh && $CATALINA_HOME/bin/prewarm.sh
 
-# Replace the Trusted SSL Certificates packaged with Lucee with those from Debian
-#   ca-certificates package from the OS is the most recent authority
-RUN cp -f /etc/ssl/certs/java/cacerts /opt/lucee/server/lucee-server/context/security/cacerts
-
 # Generate a random password to secure the admin
 RUN $BUILD_DIR/password.sh
-
-# Remove command modules
-RUN $BUILD_DIR/uninstall-cfconfig.sh
